--- a/implementation/workspace/cassette-deck/pom.xml
+++ b/implementation/workspace/cassette-deck/pom.xml
@@ -1,13 +1,37 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>umons.ac.be</groupId>
-  <artifactId>cassette-deck</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
+    <modelVersion>4.0.0</modelVersion>
+    <groupId>umons.ac.be</groupId>
+    <artifactId>cassette-deck</artifactId>
+    <version>0.0.1-SNAPSHOT</version>
   
-  <properties>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
-	
+    <properties>
+        <maven.compiler.source>1.8</maven.compiler.source>
+        <maven.compiler.target>1.8</maven.compiler.target>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+   
+    <!--    <dependencies>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-graphics</artifactId>
+            <version>12-ea+2</version>
+        </dependency>
+    </dependencies>-->
+    
+    <!--    JavaFx plugin-->
+    <build>
+        <plugins> 
+            <plugin>
+                <groupId>com.zenjava</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>8.8.3</version>
+                <configuration>
+                    <vendor>YourCompany</vendor>
+                    <mainClass>your.package.with.Launcher</mainClass>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
+       
+
 </project>
