--- a/implementation/workspace/cassette-deck/pom.xml
+++ b/implementation/workspace/cassette-deck/pom.xml
@@ -17,12 +17,12 @@
             <artifactId>fontawesomefx</artifactId>
             <version>8.9</version>
         </dependency>
-       <!-- MP3 player -->
-        <dependency>
+        <!-- MP3 player -->
+<!--        <dependency>
             <groupId>com.googlecode.soundlibs</groupId>
             <artifactId>jlayer</artifactId>
             <version>1.0.1-1</version>
-        </dependency>
+        </dependency>-->
 
     </dependencies>
     
@@ -34,12 +34,14 @@
                 <artifactId>javafx-maven-plugin</artifactId>
                 <version>8.8.3</version>
                 <configuration>
-                    <vendor>YourCompany</vendor>
-                    <mainClass>your.package.with.Launcher</mainClass>
+<!--                    <vendor>YourCompany</vendor>-->
+                    <mainClass>tools.Start</mainClass>
                 </configuration>
             </plugin>
         </plugins>
     </build>
+    
+    
        
 
 </project>
